# video_recorder

./: .gitignore  Dockerfile  README.md  build.sh  record_video.py  start_recording.sh  stop_recording.sh
config/: camera_parameters.yml
docker/: Dockerfile  docker_build.sh  docker_run.sh
robotarium_camera/: CMakeLists.txt
robotarium_camera/include/: CustomObserver.cpp  CustomObserver.h  RobotariumCamera.cpp  RobotariumCamera.h  TransformImage.h
robotarium_camera/src/: record_video.cpp  test_record_video.cpp
video_file/: readme
